错误返回信息问题修复以及代码规范优化